WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145485
REGRESSION (179771): zooming on facebook images covers image
https://bugs.webkit.org/show_bug.cgi?id=145485
Summary
REGRESSION (179771): zooming on facebook images covers image
Simon Fraser (smfr)
Reported
2015-05-29 17:22:19 PDT
REGRESSION (179771): zooming on facebook images covers image
Attachments
Patch
(4.76 KB, patch)
2015-05-29 17:23 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.42 KB, patch)
2015-05-30 14:26 PDT
,
alan
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-mavericks
(559.02 KB, application/zip)
2015-05-30 15:35 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-05-29 17:23:34 PDT
Created
attachment 253943
[details]
Patch
Jon Lee
Comment 2
2015-05-29 17:27:18 PDT
***
Bug 145484
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 3
2015-05-29 18:05:38 PDT
Comment on
attachment 253943
[details]
Patch Re-instating this patch, since I think fixing LayoutRect::scale to not overflow is hard.
alan
Comment 4
2015-05-30 14:00:04 PDT
(In reply to
comment #3
)
> Comment on
attachment 253943
[details]
> Patch > > Re-instating this patch, since I think fixing LayoutRect::scale to not > overflow is hard.
I think the proper fix is to preserve the infinite state of the LayoutRect regardless of the scale; something like this diff --git a/Source/WebCore/platform/graphics/LayoutRect.cpp b/Source/WebCore/platform/graphics/LayoutRect.cpp index f899004..a2f53b9 100644 --- a/Source/WebCore/platform/graphics/LayoutRect.cpp +++ b/Source/WebCore/platform/graphics/LayoutRect.cpp @@ -106,12 +106,13 @@ void LayoutRect::uniteIfNonZero(const LayoutRect& other) void LayoutRect::scale(float s) { - m_location.scale(s, s); - m_size.scale(s); + scale(s, s); } void LayoutRect::scale(float xScale, float yScale) { + if (isInfinite()) + return; m_location.scale(xScale, yScale); m_size.scale(xScale, yScale); }
alan
Comment 5
2015-05-30 14:26:13 PDT
Created
attachment 253963
[details]
Patch
Build Bot
Comment 6
2015-05-30 15:35:35 PDT
Comment on
attachment 253963
[details]
Patch
Attachment 253963
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5482701704396800
New failing tests: compositing/layer-creation/zoomed-clip-intersection.html
Build Bot
Comment 7
2015-05-30 15:35:38 PDT
Created
attachment 253967
[details]
Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
alan
Comment 8
2015-06-01 18:30:01 PDT
Committed
r185093
: <
http://trac.webkit.org/changeset/185093
>
alan
Comment 9
2015-06-01 18:31:39 PDT
rdar://problem/21003563
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug