REGRESSION (179771): zooming on facebook images covers image https://bugs.webkit.org/show_bug.cgi?id=145485

Reviewed by Simon Fraser.

Scaling an infinite rect should always produce an infinite rect.
(Based on Simon Fraser's patch)

Source/WebCore:

Test: compositing/layer-creation/zoomed-clip-intersection.html

* platform/graphics/LayoutRect.cpp:
(WebCore::LayoutRect::scale):

LayoutTests:

* compositing/layer-creation/zoomed-clip-intersection-expected.txt: Added.
* compositing/layer-creation/zoomed-clip-intersection.html: Added.

Canonical link: https://commits.webkit.org/163578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185093 268f45cc-cd09-0410-ab3c-d52691b4dbfc