Source/WebCore/platform/graphics/LayoutRect.h
@@ -149,7 +149,7 @@ public:
         m_size.setHeight(m_size.height() + dy + dy);
     }
     void inflate(LayoutUnit d) { inflateX(d); inflateY(d); }
-    WEBCORE_EXPORT void scale(float s);
+    WEBCORE_EXPORT void scale(float);
     void scale(float xScale, float yScale);
 
     LayoutRect transposedRect() const { return LayoutRect(m_location.transposedPoint(), m_size.transposedSize()); }
